# stable-bank

./: .gitignore  README.md  white_paper.md
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: WalletButton.tsx
app/lib/: api.ts
backend/: Cargo.toml  stablebank.db
backend/src/: config.rs  db.rs  main.rs  marinade.rs  staking.rs
backend/src/routes/: balance.rs  config.rs  deposit.rs  mod.rs  try.rs  withdraw.rs
backend/src/wallet/: mod.rs
