[package]
name = "stablebank-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
base64 = "0.21"
bincode = "1"
